--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,4 +1,4 @@
-  
+
 <%#
 Copyright 2008-2013 Concur Technologies, Inc.
 Licensed under the Apache License, Version 2.0 (the "License"); you may
@@ -57,12 +57,12 @@ under the License.
             <a href="javascript:;" class="nav_first">v1<i class="icon_nav"></i></a>
             <ul class="nav_ul">
               <li>
-                <a href="/spot-doc/spot/vn/en/" id="v1_url">v1</a>
+                <a href="/docs/spot/v1/en/" id="v1_url">v1</a>
               </li>
             </ul>
           </span>
           <span class="nav_cell nav_tab">
-            <a href="/spot-doc/spot/vn/en/" id="btn_spot">现货API</a>
+            <a href="/docs/spot/v1/en/" id="btn_spot">现货API</a>
           </span>
         </div>
       </div>
@@ -146,7 +146,7 @@ under the License.
         btn_spot.innerHTML = 'Spot API';
         lang_btn.href = url.replace('en/', 'cn/');
         btn_spot.href = btn_spot.href.replace('cn/', 'en/');
-        v1_url.href = '/spot-doc/spot/vn/en/';
+        v1_url.href = '/docs/spot/v1/en/';
       }
       lang_btn.style.display = 'block';
       function GetUrlRelativePath(){
